--- a/a2/Views/Clients/Index.cshtml
+++ b/a2/Views/Clients/Index.cshtml
@@ -12,6 +12,9 @@
 <table class="table">
     <tr>
         <th>
+            @Html.DisplayNameFor(model => model.SmartData.id)
+        </th>
+        <th>
             @Html.DisplayNameFor(model => model.Month)
         </th>
         <th>
@@ -61,6 +64,9 @@
 
 @foreach (var item in Model) {
     <tr>
+        <td>
+            @Html.DisplayFor(modelItem => item.SmartData.id)
+        </td>
         <td>
             @Html.DisplayFor(modelItem => item.Month)
         </td>
