--- a/a2/Views/Smarts/Details.cshtml
+++ b/a2/Views/Smarts/Details.cshtml
@@ -1,50 +1,50 @@
 ﻿@model a2.Models.Smart
 
 @{
-    ViewBag.Title = "Details";
+    Layout = null;
 }
 
-<h2>Details</h2>
+<!DOCTYPE html>
 
-<div>
-    <h4>Smart</h4>
-    <hr />
-    <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.Client.Surname)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Client.Surname)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.AccompanimentMinutes)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.AccompanimentMinutes)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.NumberTransportsProvided)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.NumberTransportsProvided)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.ReferredToNursePractitioner)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.ReferredToNursePractitioner)
-        </dd>
-
-    </dl>
-</div>
-<p>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.id }) |
-    @Html.ActionLink("Back to List", "Index")
-</p>
+<html>
+<head>
+    <meta name="viewport" content="width=device-width" />
+    <title>Details</title>
+</head>
+<body>
+    <div>
+        <h4>Smart</h4>
+        <hr />
+        <dl class="dl-horizontal">
+            <dt>
+                @Html.DisplayNameFor(model => model.AccompanimentMinutes)
+            </dt>
+    
+            <dd>
+                @Html.DisplayFor(model => model.AccompanimentMinutes)
+            </dd>
+    
+            <dt>
+                @Html.DisplayNameFor(model => model.NumberTransportsProvided)
+            </dt>
+    
+            <dd>
+                @Html.DisplayFor(model => model.NumberTransportsProvided)
+            </dd>
+    
+            <dt>
+                @Html.DisplayNameFor(model => model.ReferredToNursePractitioner)
+            </dt>
+    
+            <dd>
+                @Html.DisplayFor(model => model.ReferredToNursePractitioner)
+            </dd>
+    
+        </dl>
+    </div>
+    <p>
+        @Html.ActionLink("Edit", "Edit", new { id = Model.id }) |
+        @Html.ActionLink("Back to List", "Index")
+    </p>
+</body>
+</html>
