--- a/a2/Views/Shared/_Layout.cshtml
+++ b/a2/Views/Shared/_Layout.cshtml
@@ -6,6 +6,8 @@
     <title>@ViewBag.Title - My ASP.NET Application</title>
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
+    @Scripts.Render("~/Content/Scripts/jquery-2.1.3.min.js")
+    @Scripts.Render("~/Content/Scripts/jquery-ui-1.11.3.min.js")
 
 </head>
 <body>
@@ -29,7 +31,8 @@
                         @Html.Partial("_Lookup")
                     }
                     <li>@Html.ActionLink("Clients", "Index", "Clients")</li>
-                    <li>@Html.ActionLink("Smart", "Index", "Smarts")</li>
+                    <li>@Html.ActionLink("Smarts", "Index", "Smarts")</li>
+                    <li>@Html.ActionLink("Report", "Index", "Reports")</li>
                 </ul>
                 @Html.Partial("_LoginPartial")
             </div>
