--- a/a2/Views/Smarts/Index.cshtml
+++ b/a2/Views/Smarts/Index.cshtml
@@ -1,51 +1,53 @@
 ﻿@model IEnumerable<a2.Models.Smart>
 
 @{
-    ViewBag.Title = "Index";
+    Layout = null;
 }
 
-<h2>Index</h2>
+<!DOCTYPE html>
 
-<p>
-    @Html.ActionLink("Create New", "Create")
-</p>
-<table class="table">
-    <tr>
-        <th>
-            @Html.DisplayNameFor(model => model.Client.Surname)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.AccompanimentMinutes)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.NumberTransportsProvided)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.ReferredToNursePractitioner)
-        </th>
-        <th></th>
-    </tr>
-
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.Client.Surname)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.AccompanimentMinutes)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.NumberTransportsProvided)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.ReferredToNursePractitioner)
-        </td>
-        <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.id }) |
-            @Html.ActionLink("Details", "Details", new { id=item.id }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.id })
-        </td>
-    </tr>
-}
-
-</table>
+<html>
+<head>
+    <meta name="viewport" content="width=device-width" />
+    <title>Index</title>
+</head>
+<body>
+    <p>
+        @Html.ActionLink("Create New", "Create")
+    </p>
+    <table class="table">
+        <tr>
+            <th>
+                @Html.DisplayNameFor(model => model.AccompanimentMinutes)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.NumberTransportsProvided)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.ReferredToNursePractitioner)
+            </th>
+            <th></th>
+        </tr>
+    
+    @foreach (var item in Model) {
+        <tr>
+            <td>
+                @Html.DisplayFor(modelItem => item.AccompanimentMinutes)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.NumberTransportsProvided)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.ReferredToNursePractitioner)
+            </td>
+            <td>
+                @Html.ActionLink("Edit", "Edit", new { id=item.id }) |
+                @Html.ActionLink("Details", "Details", new { id=item.id }) |
+                @Html.ActionLink("Delete", "Delete", new { id=item.id })
+            </td>
+        </tr>
+    }
+    
+    </table>
+</body>
+</html>
